--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/vue-fontawesome": "^3.0.0-1",
     "core-js": "^3.6.5",
+    "i": "^0.3.7",
+    "npm": "^8.3.0",
     "vue": "^3.0.0",
     "vuex": "^4.0.2"
   },
